# quoridor_frontend

./: .gitignore  Cargo.toml  Dioxus.toml
docs/: index.html  tailwind.css  worker.js
docs/assets/dioxus/: Quoridor.js  Quoridor_bg.wasm  quoridor_frontend.js  quoridor_frontend_bg.wasm
docs/precalc/: to_precalc.json
docs/precalc/precalc/: 10;8E4;7E7;D2h;F2h;F3v;D4v;E4h.mc_node  10;8E4;8E6;A3h;D4v;E5v;H6h.mc_node  10;8E4;8E6;C3h;D4v;E4h;C5h.mc_node  10;8E4;8E6;D3h;C4h;D5v;C6h.mc_node  10;8E4;8E6;D3h;C6h;E6v;E8v.mc_node  10;8E4;8E6;D3h;D4h;C6h;E6v.mc_node  10;8E4;8E6;D3h;D5v;A6h;C6h.mc_node  10;8E4;8E6;D3h;F3h;C6h;E6h.mc_node  10;8E4;8E6;D3h;F3h;E4v;C6h.mc_node  10;8E4;8E6;D3h;F3v;B6h;E6h.mc_node  10;8E4;9D6;D3h;C6h;E6v.mc_node  10;9E5;8E6;A3h;C7h;E7h.mc_node  10;9E5;8E6;D3h;D4v;F7h.mc_node  10;9E5;8E6;D3h;D7h;F7h.mc_node  10;9E5;9E4;D3h;D5h.mc_node  10;9E5;9E4;D3h;D8v.mc_node  11;7E4;8E6;D3h;F3h;A6h;C6h;E6v.mc_node  11;7E4;8E6;D3h;F3h;D5v;C6h;E6h.mc_node  11;7E4;8E6;D3h;F3h;H3h;D7h;F7h.mc_node  11;8E5;8E6;A3h;E4h;C7h;E7h.mc_node  11;8E5;8E6;D3h;D4h;D7h;F7h.mc_node  11;8E5;8E6;D3h;E3v;D7h;F7h.mc_node  11;8E5;9E4;A1h;D3h;D5h.mc_node  11;8E6;9E5;D3h;D5v;C6h.mc_node  12;10E3;7E6;D2v;D4v;E5h.mc_node  12;7E4;7E6;D3h;F3h;E4v;D5v;C6h;E6h.mc_node  12;7E4;7E6;D3h;F3h;H3h;D7h;F7h;H7h.mc_node  12;8E5;8D6;D3h;D4h;D7h;F7h.mc_node  12;8E5;8D6;D3h;E3v;D7h;F7h.mc_node  12;8E5;8F6;A3h;E4h;C7h;E7h.mc_node  12;8E6;8E5;D3h;D5v;C6h;E6h.mc_node  13;7D4;7E6;D3h;F3h;H3h;D7h;F7h;H7h.mc_node  13;7E6;8E5;D3h;E4h;D5v;C6h;E6h.mc_node  (+77 more)
src/: board_fr.rs  calc_worker.rs  main.rs
(+1 files in other folders)
